[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/SettingsIcon.svg" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.141176, 0.141176, 0.141176, 1 )

[node name="SettingsMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="SettingsMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="SettingsButton" type="Button" parent="SettingsMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -108.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 108.0

[node name="TextureRect" type="TextureRect" parent="SettingsMenu/SettingsButton"]
self_modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="HContainer" type="HBoxContainer" parent="SettingsMenu/PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Border1" type="Control" parent="SettingsMenu/PanelContainer/HContainer"]
process_priority = 1
margin_right = 62.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsMenu/PanelContainer/HContainer"]
margin_left = 66.0
margin_right = 957.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VContainer" type="VBoxContainer" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer"]
margin_right = 876.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Border4" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer"]
margin_right = 876.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07

[node name="SettingsLabel" type="Label" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer"]
margin_top = 4.0
margin_right = 876.0
margin_bottom = 31.0
text = "Settings"

[node name="Control" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer"]
margin_top = 35.0
margin_right = 876.0
margin_bottom = 35.0

[node name="PanelContainer" type="PanelContainer" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer"]
margin_top = 39.0
margin_right = 876.0
margin_bottom = 652.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VContainer" type="VBoxContainer" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 856.0
margin_bottom = 593.0

[node name="HBoxContainer1" type="HBoxContainer" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_right = 836.0
margin_bottom = 47.0

[node name="Label" type="Label" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer1"]
margin_top = 10.0
margin_right = 307.0
margin_bottom = 37.0
text = "Pokemon Pool - Slot 1"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer1"]
margin_left = 311.0
margin_right = 347.0
margin_bottom = 47.0
flat = true

[node name="3Spacer1" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 51.0
margin_right = 836.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 3 )

[node name="TextEdit1" type="TextEdit" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 58.0
margin_right = 836.0
margin_bottom = 161.0
rect_min_size = Vector2( 0, 103 )
size_flags_vertical = 3
show_line_numbers = true

[node name="5Spacer1" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 165.0
margin_right = 836.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 174.0
margin_right = 836.0
margin_bottom = 221.0

[node name="Label" type="Label" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer2"]
margin_top = 10.0
margin_right = 313.0
margin_bottom = 37.0
text = "Pokemon Pool - Slot 2"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer2"]
margin_left = 317.0
margin_right = 353.0
margin_bottom = 47.0
flat = true

[node name="3Spacer2" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 225.0
margin_right = 836.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 3 )

[node name="TextEdit2" type="TextEdit" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 232.0
margin_right = 836.0
margin_bottom = 337.0
rect_min_size = Vector2( 0, 105 )
size_flags_vertical = 3
show_line_numbers = true

[node name="5Spacer2" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 341.0
margin_right = 836.0
margin_bottom = 346.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 350.0
margin_right = 836.0
margin_bottom = 397.0

[node name="Label" type="Label" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer3"]
margin_top = 10.0
margin_right = 313.0
margin_bottom = 37.0
text = "Pokemon Pool - Slot 3"

[node name="CheckBox" type="CheckBox" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer3"]
margin_left = 317.0
margin_right = 353.0
margin_bottom = 47.0
flat = true

[node name="3Spacer3" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 401.0
margin_right = 836.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 3 )

[node name="TextEdit3" type="TextEdit" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 408.0
margin_right = 836.0
margin_bottom = 513.0
rect_min_size = Vector2( 0, 105 )
size_flags_vertical = 3
show_line_numbers = true

[node name="5Spacer3" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 517.0
margin_right = 836.0
margin_bottom = 522.0
rect_min_size = Vector2( 0, 5 )

[node name="Button" type="Button" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer"]
margin_top = 526.0
margin_right = 836.0
margin_bottom = 573.0
text = "Confirm"

[node name="Border3" type="Control" parent="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer"]
margin_top = 656.0
margin_right = 876.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07

[node name="Border2" type="Control" parent="SettingsMenu/PanelContainer/HContainer"]
process_priority = 1
margin_left = 961.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.07

[connection signal="pressed" from="SettingsMenu/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="toggled" from="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer1/CheckBox" to="." method="_on_CheckBox_toggled" binds= [ 1 ]]
[connection signal="toggled" from="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer2/CheckBox" to="." method="_on_CheckBox_toggled" binds= [ 2 ]]
[connection signal="toggled" from="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/HBoxContainer3/CheckBox" to="." method="_on_CheckBox_toggled" binds= [ 3 ]]
[connection signal="pressed" from="SettingsMenu/PanelContainer/HContainer/ScrollContainer/VContainer/PanelContainer/VContainer/Button" to="." method="_save_data" binds= [ true ]]
